--- a/p1p4.html
+++ b/p1p4.html
@@ -29,9 +29,14 @@
     <div id="main" class="map">
         <h1>Illinois Institute of Technology</h1>
         <div id="map"></div>
+        <p>Address: 10 W 35th St, Chicago, IL 60616</p>
+        <p>Contact: (312) 567-3000</p>
+        <p id="time"></p>
+        <p>Welcome To <a href="https://www.iit.edu/">IIT</a></p>
         <button id="button" onclick="jump()">
             Visit
         </button>
+
     </div>
     <footer>
         <p>Made by Deyang Meng</p>
